syntax = "proto3";

                 package salonAccount;
service SalonAccountService {
 rpc createSalonAccount (SalonAccountCreateInput) returns (SalonAccount) {}
rpc salonAccounts (findManyParams) returns (stream SalonAccount) {}
rpc salonAccount (SalonAccountWhereUniqueInput) returns (SalonAccount) {}
rpc updateSalonAccount (SalonAccountUpdateInput) returns (SalonAccount) {}
rpc deleteSalonAccount (SalonAccountWhereUniqueInput) returns (SalonAccount) {} 
 }
message SalonAccountCreateInput {
int32 balance = 1;
string createdAt = 2;
string id = 3;
string name = 4;
int32 numberField = 5;
string typeField = 6;
string updatedAt = 7;
};
message SalonAccount {
int32 balance = 1;
string createdAt = 2;
string id = 3;
string name = 4;
int32 numberField = 5;
string typeField = 6;
string updatedAt = 7;
};
message SalonAccountWhereUniqueInput {
int32 balance = 1;
string createdAt = 2;
string id = 3;
string name = 4;
int32 numberField = 5;
string typeField = 6;
string updatedAt = 7;
};
message SalonAccountUpdateInput {
int32 balance = 1;
string createdAt = 2;
string id = 3;
string name = 4;
int32 numberField = 5;
string typeField = 6;
string updatedAt = 7;
};
message findManyParams {

};